--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y-web-transport",
+  "name": "yjs-webtransport",
   "version": "0.1.0",
   "description": "WebTransport provider for Y.js — Real-time collaboration over QUIC with unreliable datagram support",
   "main": "dist/index.js",
